[project]
name = "eda"
version = "0.1.0"
description = "A tool that allows the user to do some basic data cleaning, visualization and exploratory data analysis"
authors = [
    {name = "StudentOfDS",email = "17ayush@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.41.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "plotly (>=5.24.1,<6.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "polars (>=1.20.0,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "xlsxwriter (>=3.2.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
